feat: Authentication TODO: Authorization
