# app.py
@@ -1,12 +1,11 @@
 import os
-from apiflask import APIFlask, HTTPTokenAuth
+from apiflask import APIFlask
 from db import init_app
 from flask_cors import CORS
-from routes import auth, company, game, genre, platform, role
+from routes import authentication, company, game, genre, platform, role, user
 from flask import send_from_directory
 
 app = APIFlask(__name__, docs_ui='swagger-ui', title='Sweet Potato API', version='1.0.0')
-auth = HTTPTokenAuth(scheme='Bearer')
 
 app.config.from_prefixed_env()
 app.config['SPEC_FORMAT'] = 'json'
@@ -25,26 +24,6 @@ os.makedirs(app.instance_path, exist_ok=True)
 os.makedirs(app.config['UPLOAD_DIR'], exist_ok=True)
 
 
-def create_token(user_id):
-    # Implement your token creation logic here
-    # Return the token
-    # Example:
-    # token = generate_token(user_id)
-    # return token
-    # header = {'alg': 'HS256'}
-    # payload = {'id': user_id}
-    pass
-
-
-@auth.verify_token
-def verify_token(token):
-    # Implement your token verification logic here
-    # Return the user ID if the token is valid, otherwise return None
-    # Example:
-    # user_id = verify_
-    pass
-
-
 # Register routes
 @app.get('/upload/<path:filename>')
 def read_upload(filename):
@@ -52,9 +31,10 @@ def read_upload(filename):
 
 
 # Register blueprints
-# app.register_blueprint(auth)
+app.register_blueprint(authentication)
 app.register_blueprint(company)
 app.register_blueprint(game)
 app.register_blueprint(genre)
 app.register_blueprint(platform)
 app.register_blueprint(role)
+app.register_blueprint(user)
