# openapi.json
@@ -62,6 +62,21 @@
                 ],
                 "type": "object"
             },
+            "Created": {
+                "properties": {
+                    "id": {
+                        "type": "integer"
+                    },
+                    "message": {
+                        "type": "string"
+                    }
+                },
+                "required": [
+                    "id",
+                    "message"
+                ],
+                "type": "object"
+            },
             "GameIn": {
                 "properties": {
                     "companies": {
@@ -83,7 +98,7 @@
                         "items": {
                             "format": "binary",
                             "type": "string",
-                            "x-maximum": "5 MB"
+                            "x-maximum": "100 MB"
                         },
                         "type": "array"
                     },
@@ -310,6 +325,51 @@
                 ],
                 "type": "object"
             },
+            "Token": {
+                "properties": {
+                    "token": {
+                        "type": "string"
+                    }
+                },
+                "type": "object"
+            },
+            "UserIn": {
+                "properties": {
+                    "password": {
+                        "type": "string"
+                    },
+                    "username": {
+                        "type": "string"
+                    }
+                },
+                "required": [
+                    "password",
+                    "username"
+                ],
+                "type": "object"
+            },
+            "UserOut": {
+                "properties": {
+                    "avatar": {
+                        "format": "url",
+                        "type": "string"
+                    },
+                    "id": {
+                        "type": "integer"
+                    },
+                    "name": {
+                        "type": "string"
+                    },
+                    "username": {
+                        "type": "string"
+                    }
+                },
+                "required": [
+                    "id",
+                    "username"
+                ],
+                "type": "object"
+            },
             "ValidationError": {
                 "properties": {
                     "detail": {
@@ -333,6 +393,12 @@
                     }
                 },
                 "type": "object"
+            }
+        },
+        "securitySchemes": {
+            "BearerAuth": {
+                "scheme": "bearer",
+                "type": "http"
             }
         }
     },
@@ -409,10 +475,16 @@
                     "201": {
                         "content": {
                             "application/json": {
-                                "schema": {}
+                                "example": {
+                                    "id": 1,
+                                    "message": "Data created successfully!"
+                                },
+                                "schema": {
+                                    "$ref": "#/components/schemas/Created"
+                                }
                             }
                         },
-                        "description": "Created"
+                        "description": "Successful response"
                     },
                     "409": {
                         "content": {
@@ -584,7 +656,35 @@
         "/api/games/": {
             "get": {
                 "description": "List of games",
-                "parameters": [],
+                "parameters": [
+                    {
+                        "description": "Authorization header in the format: Bearer <access_token>",
+                        "in": "header",
+                        "name": "authorization",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "in": "query",
+                        "name": "offset",
+                        "required": false,
+                        "schema": {
+                            "default": 0,
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "in": "query",
+                        "name": "limit",
+                        "required": false,
+                        "schema": {
+                            "default": 20,
+                            "type": "integer"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "content": {
@@ -611,6 +711,16 @@
                         },
                         "description": "Successful response"
                     },
+                    "401": {
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/HTTPError"
+                                }
+                            }
+                        },
+                        "description": "Authentication error"
+                    },
                     "404": {
                         "content": {
                             "application/json": {
@@ -632,6 +742,11 @@
                         "description": "Validation error"
                     }
                 },
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "summary": "Read Games",
                 "tags": [
                     "Game"
@@ -653,10 +768,16 @@
                     "201": {
                         "content": {
                             "application/json": {
-                                "schema": {}
+                                "example": {
+                                    "id": 1,
+                                    "message": "Data created successfully!"
+                                },
+                                "schema": {
+                                    "$ref": "#/components/schemas/Created"
+                                }
                             }
                         },
-                        "description": "Created"
+                        "description": "Successful response"
                     },
                     "409": {
                         "content": {
@@ -940,10 +1061,16 @@
                     "201": {
                         "content": {
                             "application/json": {
-                                "schema": {}
+                                "example": {
+                                    "id": 1,
+                                    "message": "Data created successfully!"
+                                },
+                                "schema": {
+                                    "$ref": "#/components/schemas/Created"
+                                }
                             }
                         },
-                        "description": "Created"
+                        "description": "Successful response"
                     },
                     "409": {
                         "content": {
@@ -1022,7 +1149,7 @@
                         "content": {
                             "application/json": {
                                 "example": {
-                                    "id": "1",
+                                    "id": 1,
                                     "name": "Action"
                                 },
                                 "schema": {
@@ -1123,10 +1250,16 @@
                     "201": {
                         "content": {
                             "application/json": {
-                                "schema": {}
+                                "example": {
+                                    "id": 1,
+                                    "message": "Data created successfully!"
+                                },
+                                "schema": {
+                                    "$ref": "#/components/schemas/Created"
+                                }
                             }
                         },
-                        "description": "Created"
+                        "description": "Successful response"
                     },
                     "409": {
                         "content": {
@@ -1386,10 +1519,16 @@
                     "201": {
                         "content": {
                             "application/json": {
-                                "schema": {}
+                                "example": {
+                                    "id": 1,
+                                    "message": "Data created successfully!"
+                                },
+                                "schema": {
+                                    "$ref": "#/components/schemas/Created"
+                                }
                             }
                         },
-                        "description": "Created"
+                        "description": "Successful response"
                     },
                     "409": {
                         "content": {
@@ -1549,6 +1688,170 @@
                 ]
             }
         },
+        "/api/users/{id}": {
+            "get": {
+                "description": "User profile",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "content": {
+                            "application/json": {
+                                "example": {
+                                    "avatar": "https://example.com/avatar.png",
+                                    "id": 1,
+                                    "name": "ohayou",
+                                    "username": "ohayou"
+                                },
+                                "schema": {
+                                    "$ref": "#/components/schemas/UserOut"
+                                }
+                            }
+                        },
+                        "description": "Successful response"
+                    },
+                    "404": {
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/HTTPError"
+                                }
+                            }
+                        },
+                        "description": "Not found"
+                    }
+                },
+                "summary": "Read User",
+                "tags": [
+                    "User"
+                ]
+            }
+        },
+        "/auth/login": {
+            "post": {
+                "description": "Authenticate a user",
+                "parameters": [],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "example": {
+                                "password": "ohayou123",
+                                "username": "ohayou"
+                            },
+                            "schema": {
+                                "$ref": "#/components/schemas/UserIn"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "content": {
+                            "application/json": {
+                                "example": {
+                                    "token": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6MSwiYWRtaW4iOjAsImV4cCI6MTczNDM1MTMzMi45MjYzOTh9.Dh--bIms6bq6UseB11eGUvCeNwfb-ub0vD4Jq5LXlN8"
+                                },
+                                "schema": {
+                                    "$ref": "#/components/schemas/Token"
+                                }
+                            }
+                        },
+                        "description": "Include the token inside Authorization Headers to access protected resources"
+                    },
+                    "401": {
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/HTTPError"
+                                }
+                            }
+                        },
+                        "description": "Unauthorized"
+                    },
+                    "422": {
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ValidationError"
+                                }
+                            }
+                        },
+                        "description": "Validation error"
+                    }
+                },
+                "summary": "Login",
+                "tags": [
+                    "Authentication"
+                ]
+            }
+        },
+        "/auth/register": {
+            "post": {
+                "description": "Register a user",
+                "parameters": [],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "example": {
+                                "password": "ohayou123",
+                                "username": "ohayou"
+                            },
+                            "schema": {
+                                "$ref": "#/components/schemas/UserIn"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "content": {
+                            "application/json": {
+                                "example": {
+                                    "id": 1,
+                                    "message": "Data created successfully!"
+                                },
+                                "schema": {
+                                    "$ref": "#/components/schemas/Created"
+                                }
+                            }
+                        },
+                        "description": "Successful response"
+                    },
+                    "409": {
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/HTTPError"
+                                }
+                            }
+                        },
+                        "description": "Conflict"
+                    },
+                    "422": {
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ValidationError"
+                                }
+                            }
+                        },
+                        "description": "Validation error"
+                    }
+                },
+                "summary": "Register",
+                "tags": [
+                    "Authentication"
+                ]
+            }
+        },
         "/upload/{filename}": {
             "get": {
                 "parameters": [
@@ -1592,6 +1895,9 @@
     ],
     "tags": [
         {
+            "name": "Authentication"
+        },
+        {
             "name": "Company"
         },
         {
@@ -1605,6 +1911,9 @@
         },
         {
             "name": "Role"
+        },
+        {
+            "name": "User"
         }
     ]
 }
