# routes/__init__.py
@@ -1,6 +1,7 @@
-from routes.auth import auth
+from routes.auth import authentication
 from routes.company import company
 from routes.game import game
 from routes.genre import genre
 from routes.platform import platform
 from routes.role import role
+from routes.user import user
